# Flask_GOIT

./: .env  .env.example  READ.me  README.md  pyproject.toml
config/: config.py
database/: app.db.sqlite
migrations/versions/: 5c56d10446f7_initial_migrate.py
src/: __init__.py  models.py  routes.py
src/libs/: validation_schema.py
src/repository/: users.py
src/templates/: base.html
src/templates/pages/: login.html  pictures.html  registration.html  upload.html
